# forgather

./: .flake8  .formatting-ignore  .gitignore  .pre-commit-config.yaml.example  BUG_FIXES_SUMMARY.md  CHECKPOINT_IMPROVEMENT_PLAN.md  CLAUDE.md  CLAUDE_SESSION.md  DIVERGENCE_DETECTION_IMPLEMENTATION.md  LICENSE  OPTIMIZER_STATE_DICT_IMPLEMENTATION.md  README.md  REFACTOR_SUMMARY.md  distributed.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  syntax.md
.claude/agents/: git-code-reviewer.md
.claude_notes/: CHECKPOINT_INTEGRATION_SUMMARY.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE2_IMPLEMENTATION_SUMMARY.md  PHASE3_IMPLEMENTATION_SUMMARY.md
.githooks/: README.md  pre-commit
aiws/: accel_trainer.py  attninspector.py  base_trainer.py  construct.py  default_callbacks.py  dotdict.py  periodic_function.py  tb_logger.py  tokenizer_trainer.py
chat_templates/: README.md  alpaca.jinja  chatml.jinja  chatml_eos.jinja  narrative_chat.jinja
docs/: README.md  adafactor-triton-performance.md  bugs.md  logs-analysis.md  model-architecture.md  syntax.md
docs/checkpointing/: README.md  distributed_checkpoint_abstraction.md  divergence_detection.md  example_usage.py  migration_guide.md  sharded_checkpoint_api.md  user_guide.md
docs/configuration/: README.md  debugging.md  inheritance.md  meta.yaml  (+6 more)
example_projects/: project_config.ipynb  train.ipynb
examples/: README.md  optimizer_checkpoint_example.py
forgather/: __init__.py  config.py  dynamic.py  latent.py  utils.py  yaml_utils.py
forgather_workspace/: base_directories.yaml  meta_defaults.yaml
model_src/: causal_transformer.py  dynamic_causal_lm.py  dynamic_causal_template.py
notebooks/: custom_model.ipynb  forgather.ipynb  inference.ipynb  model.ipynb  project_config.ipynb  project_index.ipynb  train.ipynb
prompts/: short_stories.yaml  tiny_stories.yaml
scripts/: chatml_tokens.yaml  convert_llama.py  example_additional_tokens.yaml  install_pkgs.sh  setup-hooks.sh  test_model_loading.py  train_script.py
syntax_highlighting/: test-forgather-syntax.yaml
tests/: CHECKPOINT_TESTING.md  benchmark_adafactor_triton.py  benchmark_triton_kernels.py  conftest.py  profile_large_vocab_memory.py  run_dataloader_dispatcher_tests.sh  test_adafactor_triton.py  test_bin_packing.py  test_checkpoint_integration.py  test_dataloader_dispatcher_multidim.py  test_divergence_detection.py  test_document_boundaries.py  test_model_equivalence.py  test_optimizer_state_dict.py  test_packing_batch_behavior.py  test_packing_comparison.py  test_qwen3_packing.py  test_shuffle_output.py
tutorial/: CausalLM.ipynb  dataset.ipynb  forgather.ipynb  forgather_config.yaml  my_first_transformer.ipynb  simple_lm.ipynb  tokenizer.ipynb  train.sh
tutorial_code/: model_utils.py  tokenizer.py  train.py
(+1713 files in other folders)
