[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["forgather*"]

[project]
name = "forgather"
description = "ML project configuration framework."
#readme = "README.md"
license = {text = "MIT License"}
requires-python = ">=3.11"

dependencies = [
    "accelerate ~= 1.11",
    "datasets ~= 4.3",
    "ipython >= 8.12.3",
    "Jinja2 ~= 3.1",
    "matplotlib ~= 3.8",
    "numpy ~= 1.26",
    "platformdirs ~= 3.10",
    "PyYAML ~= 6.0",
    "tensorboard ~= 2.16",
    "tokenizers ~= 0.22",
    "torch ~= 2.9",
    "torchvision ~= 0.24",
    "transformers ~= 5.0",
    "tqdm ~= 4.65",
    "aiohttp ~= 3.9",
    "torchao ~= 0.14",
    "torchdata ~= 0.11",
    "uvicorn",
    "fastapi",
    "openai",
    "huggingface_hub[cli]",
    "pytest",
    "black",
    "cut-cross-entropy",
    "liger-kernel",
    "triton",
    "dacite",
]
version = "2024.0.0a1"
authors = [
    {name = "Jason dinAlt", email = "joedkloss@gmail.com"},
]
keywords = [
    "ml", "config", "configuration", "trainer", "training", "machine learning",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
]

[project.optional-dependencies]
test = [
    "pytest >= 7.0.0",
    "pytest-cov >= 4.0.0",
    "pytest-mock >= 3.10.0",
]

[project.scripts]
forgather = "forgather.cli:main"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
